force-app/main/default/objects/TASKRAY__ViewProjectTasks__c/TASKRAY__ViewProjectTasks__c.object-meta.xml
<CustomObject>
    <description>This is a TaskRay &quot;behind the scenes&quot; object that stores the relationship between user and project for sidebar selection preferences.</description>
    <label>TaskRay View Project</label>
    <nameField>
        <label>ViewProjectTasks Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TaskRay View Project</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>