force-app/main/default/objects/TASKRAY__ViewProjectTasks__c/fields/TASKRAY__IsFavorite__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__IsFavorite__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Favorite project for user</label>
    <type>Checkbox</type>
</CustomField>