force-app/main/default/objects/TASKRAY__ViewProjectTasks__c/fields/TASKRAY__Project__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>TASKRAY__Project__c</referenceTo>
    <relationshipName>ViewProjectsTasks</relationshipName>
    <type>Lookup</type>
</CustomField>