force-app/main/default/objects/TASKRAY__ViewProjectTasks__c/fields/TASKRAY__ProjectId__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__ProjectId__c</fullName>
    <label>ProjectId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>