force-app/main/default/objects/TASKRAY__ViewProjectTasks__c/fields/TASKRAY__UserId__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__UserId__c</fullName>
    <label>UserId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>